- allow adding port 0 - added google play assets